[gd_scene load_steps=4 format=2]

[ext_resource path="res://Shaders/TextureScroll.tres" type="Shader" id=2]
[ext_resource path="res://Objects/Visuals/obj_background.gd" type="Script" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/motion = Vector2( 50, 50 )
shader_param/scale = 1.0
shader_param/offset = Vector2( 0, 0 )

[node name="Background" type="Node2D"]
z_index = -4096
script = ExtResource( 3 )

[node name="Background" type="ParallaxBackground" parent="."]
layer = -1000

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.75, 0.75 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxLayer"]
centered = false
region_enabled = true

[node name="Background2" type="ParallaxBackground" parent="."]
layer = -1000

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background2"]
motion_scale = Vector2( 0.85, 0.85 )

[node name="Sprite" type="Sprite" parent="Background2/ParallaxLayer"]
centered = false
region_enabled = true

[node name="Background3" type="ParallaxBackground" parent="."]
layer = -1000

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background3"]
motion_scale = Vector2( 0.95, 0.95 )

[node name="Sprite" type="Sprite" parent="Background3/ParallaxLayer"]
centered = false
region_enabled = true

[node name="BackgroundGround1" type="ParallaxBackground" parent="."]
layer = -1000

[node name="ParallaxLayer" type="ParallaxLayer" parent="BackgroundGround1"]
motion_scale = Vector2( 0.75, 0 )

[node name="Sprite" type="Sprite" parent="BackgroundGround1/ParallaxLayer"]
centered = false
region_enabled = true

[node name="BackgroundGround2" type="ParallaxBackground" parent="."]
layer = -1000

[node name="ParallaxLayer" type="ParallaxLayer" parent="BackgroundGround2"]
motion_scale = Vector2( 0.75, 0 )

[node name="Sprite" type="Sprite" parent="BackgroundGround2/ParallaxLayer"]
centered = false
region_enabled = true

[node name="BackgroundSky" type="ParallaxBackground" parent="."]
layer = -1000

[node name="ParallaxLayer" type="ParallaxLayer" parent="BackgroundSky"]
motion_scale = Vector2( 0.15, 0.15 )

[node name="Sprite" type="Sprite" parent="BackgroundSky/ParallaxLayer"]
centered = false
region_enabled = true

[node name="BackgroundSky2" type="ParallaxBackground" parent="."]
layer = -1000

[node name="ParallaxLayer" type="ParallaxLayer" parent="BackgroundSky2"]
motion_scale = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="BackgroundSky2/ParallaxLayer"]
centered = false
region_enabled = true

[node name="BackgroundH1" type="ParallaxBackground" parent="."]
layer = -1000

[node name="ParallaxLayer" type="ParallaxLayer" parent="BackgroundH1"]
motion_scale = Vector2( 0.75, 0 )

[node name="Sprite" type="Sprite" parent="BackgroundH1/ParallaxLayer"]
centered = false
region_enabled = true

[node name="BackgroundScroll" type="ParallaxBackground" parent="."]
layer = -1000

[node name="ParallaxLayer" type="ParallaxLayer" parent="BackgroundScroll"]
motion_scale = Vector2( 0.75, 0 )

[node name="Sprite" type="Sprite" parent="BackgroundScroll/ParallaxLayer"]
material = SubResource( 1 )
centered = false
region_enabled = true
